--- a/src/app/routes/auth/working-team/working-team.component.html
+++ b/src/app/routes/auth/working-team/working-team.component.html
@@ -33,76 +33,86 @@
       <tr>
         <th nzWidth="40px"></th>
 
-        <th *ngFor="let column of listOfColumns" [nzSortOrder]="column.sortOrder" [nzSortFn]="column.sortFn"
-          [nzSortDirections]="column.sortDirections" [nzFilterMultiple]="column.filterMultiple"
-          [nzFilters]="column.listOfFilter" [nzFilterFn]="column.filterFn" [nzShowFilter]="column.showFilter">
-          {{ column.name | i18n }}
-        </th>
+        @for (column of listOfColumns; track column) {
+      
+          <th  [nzSortOrder]="column.sortOrder" [nzSortFn]="column.sortFn"
+            [nzSortDirections]="column.sortDirections" [nzFilterMultiple]="column.filterMultiple"
+            [nzFilters]="column.listOfFilter" [nzFilterFn]="column.filterFn" [nzShowFilter]="column.showFilter">
+            {{ column.name | i18n }}
+          </th>
+        }
+        
 
 
         <th *ngIf="!displayOnly">{{ 'action' | i18n }}</th>
       </tr>
     </thead>
     <tbody>
-      <ng-template ngFor let-data [ngForOf]="nestedTable.data">
-        <tr>
-          <td [nzExpand]="expandSet.has(data.id!)" (nzExpandChange)="onExpandChange(data, $event)"></td>
-
-          <td>
-            {{ data.name }}</td>
-          <td>{{ data.description }}</td>
-          <td>{{ data.enabled + '' | i18n }}</td>
-          <td *ngIf="!displayOnly">
-
-            <a nz-button routerLink="/auth/working-team/user" routerLinkActive="active"
-              [queryParams]="{workingTeamId : data.id!}">{{ 'assign-user' | i18n }}</a>
-            <nz-divider nzType="vertical"></nz-divider>
-            <button nz-button nzDanger *ngIf="data.enabled === true" (click)="disableWorkingTeam(data.id!)">{{
-              'disable' | i18n }}</button>
-            <button nz-button nzType="primary" *ngIf="data.enabled === false" (click)="enableWorkingTeam(data.id!)">{{
-              'enable' | i18n }}</button>
-          </td>
-        </tr>
-        <tr [nzExpand]="expandSet.has(data.id!)">
-          <nz-tabset [nzTabPosition]="'top'" [nzType]="'card'" [nzSelectedIndex]="tabIndex">
-            <nz-tab nzTitle="{{'menu.main.auth.user' | i18n}}">
-              <nz-table [nzScroll]="{ x: 'true', y: 'true' }" #userTable [nzData]="data.users" nzSize="middle"
-                [nzShowPagination]="false">
-                <thead>
-                  <tr>
-                    <th *ngFor="let column of listOfUserTableColumns" [nzSortOrder]="column.sortOrder"
-                      [nzSortFn]="column.sortFn" [nzSortDirections]="column.sortDirections"
-                      [nzFilterMultiple]="column.filterMultiple" [nzFilters]="column.listOfFilter"
-                      [nzFilterFn]="column.filterFn" [nzShowFilter]="column.showFilter">
-                      {{ column.name | i18n }}
-                    </th>
-
-                    <th *ngIf="!displayOnly">{{ 'action' | i18n }}</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr *ngFor="let user of userTable.data">
-                    <td>
-                      {{ user.username }}</td>
-                    <td>{{ user.firstname }}</td>
-                    <td>{{ user.lastname }}</td>
-                    <td>{{ user.email }} </td>
-                    <td>{{ user.enabled + '' | i18n }}</td>
-                    <td>{{ user.locked + '' | i18n}}</td>
-                    <td *ngIf="!displayOnly">
-                      <button nz-button (click)="deassignUser(data.id!, user.id!)">{{ 'working-team.unassign-user' | i18n
-                        }}</button>
-                    </td>
-                  </tr>
-                </tbody>
-              </nz-table>
-            </nz-tab>
-
-          </nz-tabset>
-
-
-  </tr>
-  </ng-template>
+      
+      @for (data of nestedTable.data; track data) {
+      
+        <ng-template>
+          <tr>
+            <td [nzExpand]="expandSet.has(data.id!)" (nzExpandChange)="onExpandChange(data, $event)"></td>
+  
+            <td>
+              {{ data.name }}</td>
+            <td>{{ data.description }}</td>
+            <td>{{ data.enabled + '' | i18n }}</td>
+            <td *ngIf="!displayOnly">
+  
+              <a nz-button routerLink="/auth/working-team/user" routerLinkActive="active"
+                [queryParams]="{workingTeamId : data.id!}">{{ 'assign-user' | i18n }}</a>
+              <nz-divider nzType="vertical"></nz-divider>
+              <button nz-button nzDanger *ngIf="data.enabled === true" (click)="disableWorkingTeam(data.id!)">{{
+                'disable' | i18n }}</button>
+              <button nz-button nzType="primary" *ngIf="data.enabled === false" (click)="enableWorkingTeam(data.id!)">{{
+                'enable' | i18n }}</button>
+            </td>
+          </tr>
+          <tr [nzExpand]="expandSet.has(data.id!)">
+            <nz-tabset [nzTabPosition]="'top'" [nzType]="'card'" [nzSelectedIndex]="tabIndex">
+              <nz-tab nzTitle="{{'menu.main.auth.user' | i18n}}">
+                <nz-table [nzScroll]="{ x: 'true', y: 'true' }" #userTable [nzData]="data.users" nzSize="middle"
+                  [nzShowPagination]="false">
+                  <thead>
+                    <tr>
+                      <th *ngFor="let column of listOfUserTableColumns" [nzSortOrder]="column.sortOrder"
+                        [nzSortFn]="column.sortFn" [nzSortDirections]="column.sortDirections"
+                        [nzFilterMultiple]="column.filterMultiple" [nzFilters]="column.listOfFilter"
+                        [nzFilterFn]="column.filterFn" [nzShowFilter]="column.showFilter">
+                        {{ column.name | i18n }}
+                      </th>
+  
+                      <th *ngIf="!displayOnly">{{ 'action' | i18n }}</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr *ngFor="let user of userTable.data">
+                      <td>
+                        {{ user.username }}</td>
+                      <td>{{ user.firstname }}</td>
+                      <td>{{ user.lastname }}</td>
+                      <td>{{ user.email }} </td>
+                      <td>{{ user.enabled + '' | i18n }}</td>
+                      <td>{{ user.locked + '' | i18n}}</td>
+                      <td *ngIf="!displayOnly">
+                        <button nz-button (click)="deassignUser(data.id!, user.id!)">{{ 'working-team.unassign-user' | i18n
+                          }}</button>
+                      </td>
+                    </tr>
+                  </tbody>
+                </nz-table>
+              </nz-tab>
+  
+            </nz-tabset>
+  
+  
+          </tr>
+        </ng-template>
+      }
+      
+      
   </tbody>
   </nz-table>
 
