--- a/src/app/routes/billing/vendor-invoice-maintenance/vendor-invoice-maintenance.component.html
+++ b/src/app/routes/billing/vendor-invoice-maintenance/vendor-invoice-maintenance.component.html
@@ -34,7 +34,11 @@
                 <nz-form-control [nzSpan]="12" >
     
                     <nz-select [(ngModel)]="currentInvoice!.client" (ngModelChange)="clientChanged()">
-                        <nz-option *ngFor="let client of availableClients" [nzValue]="client" [nzLabel]="client.name"></nz-option>
+                      @for (client of availableClients; track client) {
+                      
+                        <nz-option  [nzValue]="client" [nzLabel]="client.name"></nz-option>
+                      }
+                      
                     </nz-select>
                 </nz-form-control>
             </nz-form-item>
