--- a/src/app/routes/common/unit-of-measure/unit-of-measure.component.html
+++ b/src/app/routes/common/unit-of-measure/unit-of-measure.component.html
@@ -18,30 +18,40 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let data of rowSelectionTable.data">
-        <td nzShowCheckbox [(nzChecked)]="mapOfCheckedId[data.id!]" (nzCheckedChange)="refreshStatus()"></td>
-        <td>{{ data.id! }}</td>
-        <td>
-          <div class="editable-cell" *ngIf="editId !== data.id!|| editCol != 'name'; else editNameTpl">
-            <div class="editable-cell-value-wrap" (click)="startEdit(data.id!, 'name', $event)">
-              {{ data.name }}
-            </div>
-          </div>
-          <ng-template #editNameTpl>
-            <input type="text" nz-input [(ngModel)]="data.name" (blur)="changeUnitOfMeasure(data)" />
-          </ng-template>
-        </td>
-        <td>
-          <div class="editable-cell" *ngIf="editId !== data.id! || editCol != 'description'; else editDescTpl">
-            <div class="editable-cell-value-wrap" (click)="startEdit(data.id!, 'description', $event)">
-              {{ data.description }}
-            </div>
-          </div>
-          <ng-template #editDescTpl>
-            <input type="text" nz-input [(ngModel)]="data.description" (blur)="changeUnitOfMeasure(data)" />
-          </ng-template>
-        </td>
-      </tr>
+      
+      @for (data of rowSelectionTable.data; track data) {
+
+        <tr>
+          <td nzShowCheckbox [(nzChecked)]="mapOfCheckedId[data.id!]" (nzCheckedChange)="refreshStatus()"></td>
+          <td>{{ data.id! }}</td>
+          <td>
+            
+            @if(editId !== data.id!|| editCol != 'name') {
+              <div class="editable-cell-value-wrap" (click)="startEdit(data.id!, 'name', $event)">
+                {{ data.name }}
+              </div>
+            }
+            @else {
+              
+              <input type="text" nz-input [(ngModel)]="data.name" (blur)="changeUnitOfMeasure(data)" />  
+            }
+            
+          </td>
+          <td>
+            
+            @if(editId !== data.id! || editCol != 'description') {
+              <div class="editable-cell-value-wrap" (click)="startEdit(data.id!, 'description', $event)">
+                {{ data.description }}
+              </div>
+            }
+            @else {
+              <input type="text" nz-input [(ngModel)]="data.description" (blur)="changeUnitOfMeasure(data)" />
+            }
+
+            
+          </td>
+        </tr>
+      }
     </tbody>
   </nz-table>
 </div>
@@ -52,11 +62,15 @@
     <a nz-button nzType="primary" (click)="refresh()">
       {{'fresh' | i18n}}
     </a>
-    <a nz-button nzType="primary" routerLink="/common/unit-of-measure-maintenance" routerLinkActive="active"
-      (click)="clearSessionUnitOfMeasure()" *ngIf="!displayOnly">
-      {{'add' | i18n}}
-    </a>
+    
+    @if(!displayOnly) {
+      <a nz-button nzType="primary" routerLink="/common/unit-of-measure-maintenance" routerLinkActive="active"
+        (click)="clearSessionUnitOfMeasure()" >
+        {{'add' | i18n}}
+      </a>
+      <button nz-button nzDanger (click)="removeSelectedUnitOfMeasures()">{{'delete' | i18n}}</button>
+    }
 
-    <button nz-button nzDanger (click)="removeSelectedUnitOfMeasures()" *ngIf="!displayOnly">{{'delete' | i18n}}</button>
+
   </div>
 </ng-template>
